# request-tui

./: Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  main.rs  window.rs
src/app/: listener.rs  receive.rs  send.rs  sender.rs  task.rs
src/app/task/: manager.rs  resolve.rs  result.rs  state.rs
src/window/: app.rs  common.rs  download.rs
src/window/app/: download.rs  finish.rs  page.rs
src/window/common/: render.rs  util.rs  widget.rs
src/window/download/: input.rs
