[package]
name = "request-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6"
log = "0.4"
ratatui = "0.29"
tui-textarea = "0.7"
tui-logger = "0.17"
unicode-width = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
anyhow = "1"
url = "2.5"
bytes = "1"

